--- a/package.json
+++ b/package.json
@@ -14,5 +14,11 @@
   "license": "ISC",
   "devDependencies": {
     "concurrently": "^5.1.0"
+  },
+  "dependencies": {
+    "@apollo/client": "^3.8.3",
+    "@apollo/react-hooks": "^4.0.0",
+    "apollo-server-express": "^3.12.1",
+    "mongodb": "^6.0.0"
   }
 }
